tests/samples/negative/expressions/float_literal_type_mismatch.ax
module float_literal_type_mismatch;

fn main() -> i32 {
    let value: i32 = 1.0;
    return value;
}
